WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203205
macCatalyst: Swipe navigation gestures do not work
https://bugs.webkit.org/show_bug.cgi?id=203205
Summary
macCatalyst: Swipe navigation gestures do not work
Tim Horton
Reported
2019-10-21 13:13:08 PDT
macCatalyst: Swipe navigation gestures do not work
Attachments
Patch
(3.41 KB, patch)
2019-10-21 13:13 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(3.35 KB, patch)
2019-10-21 13:25 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-10-21 13:13:29 PDT
Created
attachment 381434
[details]
Patch
Tim Horton
Comment 2
2019-10-21 13:13:30 PDT
<
rdar://problem/54617473
>
Wenson Hsieh
Comment 3
2019-10-21 13:16:52 PDT
Might be slightly nicer with ALLOW_NEW_API_WITHOUT_GUARDS_BEGIN and ALLOW_NEW_API_WITHOUT_GUARDS_END.
Tim Horton
Comment 4
2019-10-21 13:21:22 PDT
Did not know we had that.
Tim Horton
Comment 5
2019-10-21 13:25:55 PDT
Created
attachment 381436
[details]
Patch
WebKit Commit Bot
Comment 6
2019-10-21 14:16:29 PDT
Comment on
attachment 381436
[details]
Patch Clearing flags on attachment: 381436 Committed
r251382
: <
https://trac.webkit.org/changeset/251382
>
WebKit Commit Bot
Comment 7
2019-10-21 14:16:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug