macCatalyst: Swipe navigation gestures do not work https://bugs.webkit.org/show_bug.cgi?id=203205 <rdar://problem/54617473>

Reviewed by Wenson Hsieh.

Source/WebKit:

* UIProcess/ios/ViewGestureControllerIOS.mm:
(-[WKSwipeTransitionController gestureRecognizerForInteractiveTransition:WithTarget:action:]):
Use a different gesture recognizer for swipe in macCatalyst that behaves
more like the macOS implementation, based on scrolling instead of the
gesture coming from a screen edge.

Source/WTF:

* wtf/Platform.h:
Add a new HAVE.


Canonical link: https://commits.webkit.org/216620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251382 268f45cc-cd09-0410-ab3c-d52691b4dbfc